Refactored code for 1.20.6 (about 95% working / 5% broken).